--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <li><a href="ejercicios/Tema4/ArrayMatematico/index.html">ArrayMatematico</a></li>
 <li><a href="ejercicios/Tema4/prototipe/index.html">Prototipe</a></li>
 <li><a href="ejercicios/Formulario/index.html">Formulario</a></li>
+<li><a href="ejercicios/eventMouse/index.html">Eventos Ratón</a></li>
+<li><a href="ejercicios/eventKeyboard/index.html">Eventos Teclado</a></li>
 </ul>
 
       <footer class="site-footer">
