Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <li><a href="ejercicios/Formulario/index.html">Formulario</a></li>
 <li><a href="ejercicios/eventMouse/index.html">Eventos Ratón</a></li>
 <li><a href="ejercicios/eventKeyboard/index.html">Eventos Teclado</a></li>
+<li><a href="ejercicios/cookies/index.html">Cookies</a></li>
+<li><a href="ejercicios/session/index.html">Session</a></li>
 </ul>
 
       <footer class="site-footer">
