cookies and session (add delete)

--- a/ejercicios/cookies/index.html
+++ b/ejercicios/cookies/index.html
@@ -12,6 +12,7 @@
 		Usuario: <input type="text" id="user">
 		Contraseña: <input type="text" id="key">
 		<input type="button" id="boton" value="enviar">
+		<input type="button" id="btnelim" value="eliminar cookies">
 	</form>
 	<p id="info"></p>
 	</div>
