--- a/ejercicios/session/index.html
+++ b/ejercicios/session/index.html
@@ -12,6 +12,7 @@
 		Usuario: <input type="text" id="user">
 		Contraseña: <input type="text" id="key">
 		<input type="button" id="boton" value="enviar">
+		<input type="button" id="btnelim" value="eliminar session">
 	</form>
 	<p>Ejemplo realizado con localStorage.</p>
 	<p id="info"></p>
