Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <li><a href="ejercicios/DOM/Arbol/index.html">Arbol DOM</a></li>
 <li><a href="ejercicios/DOM/Nodos/index.html">Nodos DOM</a></li>
 <li><a href="ejercicios/jQuery/index.html">jQuery</a></li>
+<li><a href="ejercicios/exam2012/index.html">Examen 2012</a></li>
 </ul>
 
       <footer class="site-footer">
