--- a/ejercicios/exam2012/formulario.html
+++ b/ejercicios/exam2012/formulario.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Formulario</title>
 	<script type="text/javascript" src="js/codigo.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/estilofom.css">
 </head>
 <body>
 	<h1>Formulario</h1>
@@ -13,8 +14,8 @@
 		<label>Nombre: </label><input type="text" id="nombre">
 		<label>Apellido1: </label><input type="text" id="apellido1">
 		<label>Apellido2: </label><input type="text" id="apellido2">
-		<label>Fecha de nacimiento: </label><input type="data" id="fnacimiento">
-		<input type="checkbox" id="aceptar">Acepto las condiciones
+		<label>Fecha de nacimiento: </label><input type="data" id="fnacimiento"></br>
+		<input type="checkbox" id="aceptar">Acepto las condiciones</br>
 		<input type="button" value="crear" id="crear">
 		<input type="button" value="limpiar" id="limpiar">
 	</form>	
