--- a/ejercicios/exam2012/formulario.html
+++ b/ejercicios/exam2012/formulario.html
@@ -10,7 +10,7 @@
 	<h1>Formulario</h1>
 	<p>Alta de universitario</p>
 	<form enctype="multipart/form-data" method="post">
-		<samp id="error"></samp>
+		<span id="error"></span>
 		<label>Nombre: </label><input type="text" id="nombre">
 		<label>Apellido1: </label><input type="text" id="apellido1">
 		<label>Apellido2: </label><input type="text" id="apellido2">
