--- a/ejercicios/jQuery/index.html
+++ b/ejercicios/jQuery/index.html
@@ -7,42 +7,42 @@
 <body>
 	<h1>Ejercicios de jQuery.</h1>
 	<ol>
-		<li><a href="Tema1\ejer1\index.html"></a></li>
-		<li><a href="Tema1\ejer2\index.html"></a></li>
-		<li><a href="Tema1\ejer3\index.html"></a></li>
-		<li><a href="Tema1\ejer4\index.html"></a></li>
-		<li><a href="Tema1\ejer5\index.html"></a></li>
-		<li><a href="Tema1\ejer6\index.html"></a></li>
-		<li><a href="Tema1\ejer7\index.html"></a></li>
-		<li><a href="Tema1\ejer8\index.html"></a></li>
-		<li><a href="Tema2\ejer1\index.html"></a></li>
-		<li><a href="Tema2\ejer2\index.html"></a></li>
-		<li><a href="Tema2\ejer3\index.html"></a></li>
-		<li><a href="Tema2\ejer4\index.html"></a></li>
-		<li><a href="Tema2\ejer5\index.html"></a></li>
-		<li><a href="Tema2\ejer6\index.html"></a></li>
-		<li><a href="Tema2\ejer7\index.html"></a></li>
-		<li><a href="Tema2\ejer8\index.html"></a></li>
-		<li><a href="Tema3\ejer1\index.html"></a></li>
-		<li><a href="Tema3\ejer2\index.html"></a></li>
-		<li><a href="Tema4\ejer1\index.html"></a></li>
-		<li><a href="Tema4\ejer2\index.html"></a></li>
-		<li><a href="Tema4\ejer3\index.html"></a></li>
-		<li><a href="Tema5\ejer1\index.html"></a></li>
-		<li><a href="Tema6\ejer1\index.html"></a></li>
-		<li><a href="Tema6\ejer2\index.html"></a></li>
-		<li><a href="Tema6\ejer3\index.html"></a></li>
-		<li><a href="Tema6\ejer4\index.html"></a></li>
-		<li><a href="Tema6\ejer5\index.html"></a></li>
-		<li><a href="Tema6\ejer6\index.html"></a></li>
-		<li><a href="Tema6\ejer7\index.html"></a></li>
-		<li><a href="Tema7\ejer1\index.html"></a></li>
-		<li><a href="Tema7\ejer2\index.html"></a></li>
-		<li><a href="Tema8\ejer1\index.html"></a></li>
-		<li><a href="Tema8\ejer2\index.html"></a></li>
-		<li><a href="Tema8\ejer3\index.html"></a></li>
-		<li><a href="Tema8\ejer4\index.html"></a></li>
-		<li><a href="Tema8\ejer5\index.html"></a></li>
+		<li><a href="Tema1\ejer1\index.html">Tema1 ejer1</a></li>
+		<li><a href="Tema1\ejer2\index.html">Tema1 ejer2</a></li>
+		<li><a href="Tema1\ejer3\index.html">Tema1 ejer3</a></li>
+		<li><a href="Tema1\ejer4\index.html">Tema1 ejer4</a></li>
+		<li><a href="Tema1\ejer5\index.html">Tema1 ejer5</a></li>
+		<li><a href="Tema1\ejer6\index.html">Tema1 ejer6</a></li>
+		<li><a href="Tema1\ejer7\index.html">Tema1 ejer7</a></li>
+		<li><a href="Tema1\ejer8\index.html">Tema1 ejer8</a></li>
+		<li><a href="Tema2\ejer1\index.html">Tema2 ejer1</a></li>
+		<li><a href="Tema2\ejer2\index.html">Tema2 ejer2</a></li>
+		<li><a href="Tema2\ejer3\index.html">Tema2 ejer3</a></li>
+		<li><a href="Tema2\ejer4\index.html">Tema2 ejer4</a></li>
+		<li><a href="Tema2\ejer5\index.html">Tema2 ejer5</a></li>
+		<li><a href="Tema2\ejer6\index.html">Tema2 ejer6</a></li>
+		<li><a href="Tema2\ejer7\index.html">Tema2 ejer7</a></li>
+		<li><a href="Tema2\ejer8\index.html">Tema2 ejer8</a></li>
+		<li><a href="Tema3\ejer1\index.html">Tema3 ejer1</a></li>
+		<li><a href="Tema3\ejer2\index.html">Tema3 ejer2</a></li>
+		<li><a href="Tema4\ejer1\index.html">Tema4 ejer1</a></li>
+		<li><a href="Tema4\ejer2\index.html">Tema4 ejer2</a></li>
+		<li><a href="Tema4\ejer3\index.html">Tema4 ejer3</a></li>
+		<li><a href="Tema5\ejer1\index.html">Tema5 ejer1</a></li>
+		<li><a href="Tema6\ejer1\index.html">Tema6 ejer1</a></li>
+		<li><a href="Tema6\ejer2\index.html">Tema6 ejer2</a></li>
+		<li><a href="Tema6\ejer3\index.html">Tema6 ejer3</a></li>
+		<li><a href="Tema6\ejer4\index.html">Tema6 ejer4</a></li>
+		<li><a href="Tema6\ejer5\index.html">Tema6 ejer5</a></li>
+		<li><a href="Tema6\ejer6\index.html">Tema6 ejer6</a></li>
+		<li><a href="Tema6\ejer7\index.html">Tema6 ejer7</a></li>
+		<li><a href="Tema7\ejer1\index.html">Tema7 ejer1</a></li>
+		<li><a href="Tema7\ejer2\index.html">Tema7 ejer2</a></li>
+		<li><a href="Tema8\ejer1\index.html">Tema8 ejer1</a></li>
+		<li><a href="Tema8\ejer2\index.html">Tema8 ejer2</a></li>
+		<li><a href="Tema8\ejer3\index.html">Tema8 ejer3</a></li>
+		<li><a href="Tema8\ejer4\index.html">Tema8 ejer4</a></li>
+		<li><a href="Tema8\ejer5\index.html">Tema8 ejer5</a></li>
 	</ol>
 </body>
 </html>
