Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <li><a href="ejercicios/DOM/Nodos/index.html">Nodos DOM</a></li>
 <li><a href="ejercicios/jQuery/index.html">jQuery</a></li>
 <li><a href="ejercicios/exam2012/index.html">Examen 2012</a></li>
+<li><a href="ejercicios/examFebJavaScript/index.html">Examen 2016</a></li>
 </ul>
 
       <footer class="site-footer">
