--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <li><a href="ejercicios/jQuery/index.html">jQuery</a></li>
 <li><a href="ejercicios/exam2012/index.html">Examen 2012</a></li>
 <li><a href="ejercicios/examFebJavaScript/index.html">Examen 2016</a></li>
+<li><a href="ejercicios/DAWmana/index.html">DAWmana</a></li>
 </ul>
 
       <footer class="site-footer">
