Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <li><a href="ejercicios/exam2012/index.html">Examen 2012</a></li>
 <li><a href="ejercicios/examFebJavaScript/index.html">Examen 2016</a></li>
 <li><a href="ejercicios/DAWmana/index.html">DAWmana</a></li>
+<li><a href="ejercicios/DAWmana/documentacion.html">Documentación DAWmana</a></li>
 </ul>
 
       <footer class="site-footer">
