Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <li><a href="ejercicios/examFebJavaScript/index.html">Examen 2016</a></li>
 <li><a href="ejercicios/DAWmana/index.html">DAWmana</a></li>
 <li><a href="ejercicios/DAWmana/documentacion.html">Documentación DAWmana</a></li>
+<li><a href="ejercicios/ejerAjax/ejercicio11/ejercicio11.html">Ajax con JavaScript</a></li>
+<li><a href="ejercicios/ejerAjax/ejercicio11/ejercicio12.html">Ajax con JQuery</a></li>
 </ul>
 
       <footer class="site-footer">
